# bibrs

./: README.md
bibrs/: Cargo.toml  README.md  config.toml  inspired_by.text
bibrs-pdf/: Cargo.toml  config.toml
bibrs/migrations/: 20230723133255_doi_entry.sql  20230729191314_add_gin_index.sql
bibrs/src/: main.rs
